[package]
name = "AutoHauC3"
version = "1.0.1"
authors = ["HauC3 <staff@hauc3.net>"]
edition = "2021"
build = "build.rs"
license = "BlueOak-1.0.0"

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread"]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"

[dependencies]
poise = "0.6.1"
serenity = "0.12"
dotenv = "0.15.0"
log = "0.4.28"
once_cell = "1.17.1"
env_logger = "0.11.8"